@@ -1,3 +1,8 @@
+2014-03-26  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* src/gsad.c (send_redirect_header): Provide the full url in the
+	HTTP Location header when sending redirect responses.
+
 2014-03-26  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
 	* src/html/classic/po/de.xml: Move "Orphan" to make it available in
